better notebook documentation

--- a/Experimental/skeleton-poses-action-recognition (1).ipynb
+++ b/Experimental/skeleton-poses-action-recognition (1).ipynb
@@ -214,7 +214,7 @@
     "STEP_SIZE_FRAMES = 30\n",
     "BATCH_SIZE = 128\n",
     "\n",
-    "INPUT_FEATURES = 73\n",
+    "INPUT_FEATURES = 73 # 36 (normalized poses) + 36 (velocities) + 1 (neck orientation angle)\n",
     "HIDDEN_SIZE = 128\n",
     "NUM_LAYERS = 2\n",
     "NUM_CLASSES = 2\n",
@@ -231,6 +231,7 @@
     "    print(f\"Global seed set to {seed_value}\")\n",
     "\n",
     "def load_and_label_files(data_root: str) -> pd.DataFrame:\n",
+    "\n",
     "    all_csv_files = glob(os.path.join(data_root, '**', '*.csv'), recursive=True)\n",
     "    labeled_data = [{'path': file_path, 'label': 1 if 'Potential_shoplifter' in file_path else 0} for file_path in all_csv_files]\n",
     "    df_files = pd.DataFrame(labeled_data)\n",
@@ -241,23 +242,36 @@
     "    return df_files\n",
     "\n",
     "def parse_poses_from_string(poses_str: str) -> np.ndarray:\n",
+    "    \n",
     "    try:\n",
     "        return np.array(json.loads(poses_str)).reshape(18, 2)\n",
     "    except (json.JSONDecodeError, ValueError):\n",
     "        return np.zeros((18, 2))\n",
     "\n",
     "def extract_features(csv_path: str) -> np.ndarray | None:\n",
+    "  \n",
     "    df = pd.read_csv(csv_path)\n",
     "    if df.empty or 'POSES' not in df.columns:\n",
     "        return None\n",
     "\n",
-    "    raw_poses = np.array(df['POSES'].apply(parse_poses_from_string).tolist())\n",
-    "    neck_positions = raw_poses[:, 1:2, :]\n",
-    "    normalized_poses = raw_poses - neck_positions\n",
-    "    velocities = np.diff(raw_poses, axis=0, prepend=raw_poses[0:1])\n",
-    "    neck_trajectory = raw_poses[:, 1, :]\n",
-    "    deltas = np.diff(neck_trajectory, axis=0, prepend=[neck_trajectory[0]])\n",
-    "    orientation_angles_deg = np.degrees(np.arctan2(deltas[:, 1], deltas[:, 0]))\n",
+    "    raw_poses = np.array(df['POSES'].apply(parse_poses_from_string).tolist()) \n",
+    "   \n",
+    "    #raw_poses shape: (T, 18, 2) => (frames, keypoints, (x,y))\n",
+    "    neck_positions = raw_poses[:, 1:2, :] \n",
+    "\n",
+    "    normalized_poses = raw_poses - neck_positions # We normalize the poses with respect to the neck position\n",
+    "\n",
+    "    velocities = np.diff(raw_poses, axis=0, prepend=raw_poses[0:1]) # Compute velocities\n",
+    "\n",
+    "    neck_trajectory = raw_poses[:, 1, :] # Extract neck trajectory why? Because the neck is a key point for understanding the body's movement.\n",
+    "\n",
+    "    deltas = np.diff(neck_trajectory, axis=0, prepend=[neck_trajectory[0]])  # Compute deltas why? Because the deltas represent the change in position of the neck over time.\n",
+    "\n",
+    "    orientation_angles_deg = np.degrees(np.arctan2(deltas[:, 1], deltas[:, 0])) # Compute orientation angles why? Because the orientation angles help in understanding the direction of movement.\n",
+    "    \n",
+    "    # we only use neck orientation as the key point for understanding the body's movement why? Because the neck is a key point for understanding the body's movement\n",
+    "    # but it shows limitation so maybe adding other keypoints like shoulders or hips could provide more context.\n",
+    "\n",
     "    return np.concatenate([\n",
     "        normalized_poses.reshape(raw_poses.shape[0], -1),\n",
     "        velocities.reshape(raw_poses.shape[0], -1),\n",
@@ -270,6 +284,7 @@
     "data_root = r'C:\\Users\\asus\\Desktop\\Ain-Guard Assesment\\csvs_Skeleton_poses_normal_potential_shoplifter'\n",
     "\n",
     "df_files = load_and_label_files(data_root)\n",
+    "\n",
     "df_files.head()"
    ]
   },
@@ -320,23 +335,36 @@
    ],
    "source": [
     "def get_group_id(file_path: str) -> str:\n",
+    "\n",
     "    return os.path.basename(file_path).replace('.csv', '')[-23:]\n",
     "\n",
     "def create_sliding_windows(sequences: list, labels: list, window_size: int, step_size: int):\n",
+    "\n",
     "    windowed_sequences, windowed_labels = [], []\n",
+    "\n",
     "    for i, seq in enumerate(sequences):\n",
+    "        # Sequences shorter than window_size are dropped (no padding)\n",
+    "        # Overlap amount = window_size - step_size (here 150 - 30 = 120 frames overlap → heavy redundancy).\n",
+    "\n",
     "        if seq.shape[0] >= window_size:\n",
     "            for start in range(0, seq.shape[0] - window_size + 1, step_size):\n",
+    "\n",
     "                windowed_sequences.append(seq[start:start + window_size])\n",
+    "\n",
     "                windowed_labels.append(labels[i])\n",
+    "\n",
     "    return np.array(windowed_sequences), np.array(windowed_labels)\n",
     "\n",
     "print(\" Processing all CSV files into feature sequences \")\n",
     "\n",
     "all_sequences, all_labels, all_groups, all_paths = [], [], [], []\n",
+    "\n",
     "for _, row in tqdm(df_files.iterrows(), total=len(df_files), desc=\"Extracting Features\"):\n",
+    "\n",
     "    features = extract_features(row['path'])\n",
+    "\n",
     "    if features is not None and len(features) > 0:\n",
+    "        \n",
     "        all_sequences.append(features)\n",
     "        all_labels.append(row['label'])\n",
     "        all_groups.append(get_group_id(row['path']))\n",
@@ -1941,9 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "trusted": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
