added function in experimental notebook

--- a/Experimental/skeleton-poses-action-recognition (1).ipynb
+++ b/Experimental/skeleton-poses-action-recognition (1).ipynb
@@ -495,7 +495,21 @@
     "            all_window_preds.extend(predicted_windows.cpu().numpy())\n",
     "            all_window_labels.extend([y_true_video] * len(predicted_windows))\n",
     "            probabilities = torch.softmax(outputs, dim=1)[:, 1]\n",
-    "            avg_suspicion_score = probabilities.mean().item()\n",
+    "            def aggregate_window_probs(probabilities, mode=\"mean\", k=3, p0=0.6):\n",
+    "                probs = probabilities.cpu().numpy()\n",
+    "                if mode == \"mean\":\n",
+    "                    return probs.mean()\n",
+    "                if mode == \"max\":\n",
+    "                    return probs.max()\n",
+    "                if mode == \"median\":\n",
+    "                    return np.median(probs)\n",
+    "                if mode == \"topk_mean\":\n",
+    "                    k = min(k, len(probs))\n",
+    "                    return np.sort(probs)[-k:].mean()\n",
+    "                if mode == \"prop_above\":\n",
+    "                    return (probs >= p0).mean()\n",
+    "                raise ValueError(f\"Unknown mode {mode}\")\n",
+    "            avg_suspicion_score = aggregate_window_probs(probabilities, mode=\"mean\")\n",
     "            video_suspicion_scores.append(avg_suspicion_score)\n",
     "\n",
     "    plot_report_and_matrix(all_window_labels, all_window_preds, \"Test Set Evaluation (Per-Window)\")\n",
